--- a/20241020/pd_learn.ipynb
+++ b/20241020/pd_learn.ipynb
@@ -359,7 +359,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# 行对象 Series\n",
+    "# 列对象 Series\n",
     "s0 = pd.Series([1, 3, 5, 7, 9])\n",
     "s0"
    ],
