--- a/20241025/grid_strategy.ipynb
+++ b/20241025/grid_strategy.ipynb
@@ -224,18 +224,29 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-25T09:42:40.158201Z",
-     "start_time": "2024-10-25T09:42:40.156674Z"
+     "end_time": "2024-10-26T03:09:06.629871Z",
+     "start_time": "2024-10-26T03:09:03.524426Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 先获取最近1w条数据，存入data.csv\n",
-    "# StrategyFrame(pd.DataFrame()).get_last_data(symbol='FDUSD/USDT', count=100)"
+    "StrategyFrame(pd.DataFrame()).get_last_data(symbol='FDUSD/USDT', count=1)"
    ],
    "id": "42680a4e2901544b",
-   "outputs": [],
-   "execution_count": 299
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.StrategyFrame at 0x3328a8530>"
+      ]
+     },
+     "execution_count": 332,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 332
   },
   {
    "metadata": {
